@@ -82,7 +82,7 @@ dependencies {
     implementation("io.springfox:springfox-swagger-ui:$springfoxVersion")
     implementation("org.joinfaces:primefaces-spring-boot-starter:$joinfacesVersion")
     implementation("org.primefaces.themes:bootstrap:1.0.10")
-    implementation("de.ruedigermoeller:fst:2.57")
+    implementation("de.ruedigermoeller:fst:3.0.3")
     implementation("org.postgresql:postgresql")
     // https://mvnrepository.com/artifact/de.appelgriepsch.logback/logback-gelf-appender
     implementation group: "de.appelgriepsch.logback", name: "logback-gelf-appender", version: "1.5"
@@ -181,17 +181,17 @@ liquibase {
     }
 }
 
-jacoco.toolVersion = "0.8.3"
+jacoco.toolVersion = "0.8.7"
 jacocoTestReport {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 }
 
-spotbugs.toolVersion = "3.1.12"
+spotbugs.toolVersion = "4.4.1"
 pmd {
-    toolVersion = "6.15.0"
+    toolVersion = "6.21.0"
     ruleSetFiles(new File("pmd.ruleset.xml"))
     ruleSets = []
 }
@@ -217,8 +217,8 @@ task h2Tcp(type: JavaExec) {
 }
 
 node {
-        // Version of node to use.
-        version = '14.13.1'
+    // Version of node to use.
+    version = '14.13.1'
 }
 
 task webpack(type: NodeTask, dependsOn: "npmInstall") {
@@ -273,6 +273,18 @@ spotless {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    doFirst {
+        jvmArgs = [
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/java.math=ALL-UNNAMED',
+                '--add-opens=java.base/java.util=ALL-UNNAMED',
+                '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/java.text=ALL-UNNAMED',
+                '--add-opens=java.sql/java.sql=ALL-UNNAMED'
+
+        ]
+    }
     testLogging {
         // set options for log level LIFECYCLE
         events "passed", "skipped", "failed", /*"standardOut",*/ "standardError"
